service-frontend-analysis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-frontend-analysis
  labels:
    app: service-frontend-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-frontend-analysis
  template:
    metadata:
      labels:
        app: service-frontend-analysis
    spec:
      containers:
      - name: service-frontend-analysis
        image: starax/service-frontend-analysis:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend-analysis
spec:
  selector:
    app: service-frontend-analysis
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31113
