service-frontend-voting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-frontend-voting
  labels:
    app: service-frontend-voting
    role: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-frontend-voting
  template:
    metadata:
      labels:
        app: service-frontend-voting
    spec:
      containers:
      - name: service-frontend-voting
        image: starax/service-frontend-voting:latest
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend-voting
spec:
  selector:
    app: service-frontend-voting
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31112
