service-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-redis
  labels:
    app: service-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-redis
  template:
    metadata:
      labels:
        app: service-redis
    spec:
      containers:
        - name: service-redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: service-redis
spec:
  selector:
    app: service-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
