service-serving-layer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-serving-layer
  labels:
    app: service-serving-layer
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-serving-layer
  template:
    metadata:
      labels:
        app: service-serving-layer
    spec:
      containers:
        - name: service-serving-layer
          image: juliankrieger/service-serving-layer:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-serving-layer-service
spec:
  selector:
    app: service-serving-layer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
