service-serving-layer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-serving-layer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: voting-app.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-serving-layer
              port: 
                number: 8080
